fix spacing issue on buttons

--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ a {
   box-shadow: 0px 4px #e0e0d8;
   flex-basis: 32rem;
   padding: 1rem;
-  padding-bottom: 1.5rem;
+  padding-bottom: 2rem;
 }
 
 .repo-button {
